--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test Site</title>
+<meta charset="UTF-8">
+<title>My CTF Repo Viewer</title>
 </head>
+
 <body>
-    <h1>Hello GitHub Pages</h1>
+<h1>1abhax</h1>
+<ul id="fileList"></ul>
+
+<script>
+const username = "1abhax";
+const repo = "CTF";
+
+fetch(`https://api.github.com/repos/${username}/${repo}/contents/`)
+.then(res => res.json())
+.then(data => {
+    const list = document.getElementById("fileList");
+
+    data.forEach(file => {
+        const li = document.createElement("li");
+
+        if(file.type === "dir"){
+            li.innerHTML = "📁 " + file.name;
+        } else {
+            li.innerHTML = `<a href="${file.download_url}" target="_blank">📄 ${file.name}</a>`;
+        }
+
+        list.appendChild(li);
+    });
+});
+</script>
+
 </body>
 </html>
